--- a/9.1 Flex Direction/index.html
+++ b/9.1 Flex Direction/index.html
@@ -11,9 +11,13 @@
   -->
   <style>
     .container {
+      display: inline-flex;
+      flex-direction: column;
       color: white;
       border: 5px solid gold;
-      display: flex;
+    }
+    .container > * {
+      flex-basis: 100px;
     }
 
     /*
