--- a/10.2 Grid Placement/exercise1.html
+++ b/10.2 Grid Placement/exercise1.html
@@ -28,6 +28,11 @@
       See goal1 image.
       */
     }
+    .cowboy,.astronaut,.book{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   </style>
 </head>
 
