--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -19,11 +19,82 @@
     HINT: Remember you can't change the properties of grid lines.
     But grid lines are transparent!
     */
+    body{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container {
+      display: grid;
+      background-color: #000;
+      grid-template-columns: 320px 198px 153px 50px;
+      grid-template-rows: 414px 130px 156px 20px;
+      grid-gap: 9px;
+      height: 747px;
+      width: 748px;
+    }
+    .red {
+      background-color: #E72F24;
+      grid-column: 1;
+      grid-row: 1;
+    }
+    .white1 {
+      background-color: #F0F1EC;
+      grid-column: 2 / span 3;
+      grid-row: 1;
+    }
+    .white2 {
+      background-color: #F0F1EC;
+      grid-column: 1;
+      grid-row: 2 / span 2;
+    }
+    .white3 {
+      background-color: #F0F1EC;
+      grid-area: 2/2/4/4;
+    }
+    .blue {
+      background-color: #004592;
+      grid-column: 4;
+      grid-row: 2;
+    }
+    .white4 {
+      background-color: #F0F1EC;
+      grid-column: 4;
+      grid-row: 3/ span 2;
+      border-top: #000 1px solid;
+    }
+    .white5 {
+      background-color: #F0F1EC;
+      grid-column: 1 ;
+      grid-row: 4;
+    }
+    .yellow {
+      background-color: #F9D01E;
+      grid-column: 2;
+      grid-row: 4;
+    }
+    .black {
+      background-color: #232629;
+      grid-column: 3;
+      grid-row: 4;
+    }
   </style>
 </head>
 
 <body>
   <!-- Write your HTML here -->
+   <div class="container">
+    <div class="item red"></div>
+    <div class="item white1"></div>
+    <div class="item white2"></div>
+    <div class="item white3"></div>
+    <div class="item blue"></div>
+    <div class="item white4"></div>
+    <div class="item white5"></div>
+    <div class="item yellow"></div>
+    <div class="item black"></div>
+   </div>
 </body>
 
 </html>
